# Root `BUILD.bazel` for the `@googlesql_prebuilt_linux_amd64` external
# repo. Holds the private `:_archive` / `:_archive_protos` `cc_import`s
# and exports the `include/**` header tree so the sibling
# `googlesql/public/BUILD.bazel` + `googlesql/resolved_ast/BUILD.bazel`
# wrapper `cc_library` targets can reference each header label.
#
# All public wrapper labels live under the sibling packages so the
# label paths match the `compat.labels` set frozen in
# `docs/dev/googlesql-prebuilt/manifest.md`
# (e.g. `//googlesql/public:analyzer`,
# `//googlesql/resolved_ast:resolved_node_kind_cc_proto`).
#
# This file is shipped verbatim by `tools/googlesql-prebuilt/package.sh`
# from `tools/googlesql-prebuilt/templates/BUILD.bazel`. Edits in the
# template land in the next published artifact.

load("@rules_cc//cc:defs.bzl", "cc_import", "cc_library")

package(default_visibility = ["//:__subpackages__"])

exports_files([
    "BUILD.bazel",
    "MODULE.bazel",
    "manifest.json",
])

# Every shipped header is exported as a source file so the sibling
# wrapper packages can reference them in `hdrs = ["//:include/...h"]`.
# `strip_include_prefix = "/include"` (repo-root relative; the leading
# slash is load-bearing) on each wrapper rule reroots
# `#include "googlesql/..."` under the `include/` tree.
exports_files(glob(
    ["include/**/*.h"],
    allow_empty = False,
))

# `:_all_hdrs` exposes the full `include/googlesql/**` header closure
# (hand-written `*.h` plus generated `*.pb.h`) as a single `cc_library`
# so each wrapper in `googlesql/public/BUILD.bazel` and
# `googlesql/resolved_ast/BUILD.bazel` can dep on it and resolve any
# transitively-included header without enumerating them in the
# wrapper's own `hdrs` list.
#
# Why this exists: the wrappers' `hdrs` lists are the consumer-facing
# public API frozen in `docs/dev/googlesql-prebuilt/label-inventory.md`
# (e.g. `:analyzer` exposes `analyzer.h`; `:type` exposes
# `type.h`/`type.pb.h`/`types/*.h`). But under strict-deps + sandboxing,
# every header reachable through `#include` MUST appear in a `hdrs` (or
# `textual_hdrs`) of a `cc_library` in the consuming compile's
# transitive deps. Source-mode satisfies this implicitly because the
# upstream `cc_library(:type)` etc. transitively dep on every
# `cc_proto_library` in the closure (e.g. `:annotation_cc_proto` for
# `annotation.pb.h`). The prebuilt artifact ships ONE combined static
# archive (`libgooglesql.a`), so there's no per-proto wrapper to
# transitively pull in. `:_all_hdrs` plays that role: a single private
# header-only library that every wrapper deps on.
#
# Visibility is `//:__subpackages__` so consumers cannot accidentally
# `deps = ["@googlesql//:_all_hdrs"]` and circumvent the wrappers'
# narrow public API. They must go through `:analyzer`, `:type`, etc.
# (which then deps on `:_all_hdrs` privately).
cc_library(
    name = "_all_hdrs",
    hdrs = glob(["include/googlesql/**/*.h"]),
    strip_include_prefix = "/include",
    # `:_all_hdrs` is the consumer-facing transitive-header-coverage
    # library. It exposes the full include tree under strict-deps +
    # sandboxing so each wrapper does not have to enumerate every
    # transitively-included `*.h` / `*.pb.h` it touches.
    #
    # Header-only deps (gtest is `gtest/gtest_prod.h`, used by
    # `googlesql/base/bits.h` and `value.h`). gtest's runtime symbols
    # are NOT referenced by the bundled archive, so it does not need
    # link-line ordering against `lib/libgooglesql.a`.
    #
    # Symbol-providing third-party deps (`@boringssl//...` for
    # `googlesql/base/exactfloat.h` -> `openssl/bn.h`,
    # `@com_googlesource_code_re2//...` for
    # `googlesql/public/functions/regexp.h` -> `re2/re2.h`) live in
    # `:_archive`'s `deps` instead, NOT here. The bundled `.pic.o`
    # objects inside `lib/libgooglesql.a` carry unresolved external
    # references into those libraries, and the linker resolves them
    # lazily only against archives that appear AFTER `libgooglesql.a`
    # in the link line. If they were listed here, the wrappers' DFS
    # link order (`:_all_hdrs` -> `:_archive` -> ...) would put
    # `libcrypto.a` / `libre2.a` BEFORE `libgooglesql.a`, the linker
    # would scan them with an empty unresolved-symbol set, skip them,
    # then unresolve their symbols when it walks `libgooglesql.a`.
    # See the `:_archive` rationale below for the full link-order
    # explanation.
    #
    # The wrappers still resolve `re2/re2.h` / `openssl/bn.h` / etc.
    # under strict-deps because `:_archive`'s deps propagate
    # `CcInfo.compilation_context` (i.e. the header set) up through
    # the wrapper's transitive deps. Moving the deps to `:_archive`
    # closes the link line WITHOUT losing header visibility.
    #
    # ICU + farmhash + differential-privacy are statically BUNDLED
    # into `lib/libgooglesql.a` by `tools/googlesql-prebuilt/package.sh`
    # and therefore do not appear here as deps. The bundled object code
    # carries `unicode/...` (ICU 76), `farmhash::*`, and
    # `differential_privacy::*` symbol definitions; consumers never see
    # the upstream `@icu` / `@com_google_farmhash` /
    # `@com_google_differential_privacy` repos. See
    # `MODULE.bazel.tmpl` for the rationale (none of the three has a
    # BCR module compatible with the producer's ABI).
    deps = [
        "@com_google_googletest//:gtest",
    ],
)

# Raw `cc_import`s for the two combined archives. Kept private and
# wrapped by `:_archive` / `:_archive_protos` below so the wrappers
# can attach link-only deps (googleapis cc_proto_libraries) that MUST
# appear AFTER the static archives in the link line. Without that
# ordering, `--start-lib`/`--end-lib`-wrapped `.pic.o` objects from
# `cc_proto_library` are skipped before the archive's unresolved
# `google::type::Date::~Date()` / `google::type::_Date_default_instance_`
# refs are seen, and the consumer's emulator link fails. See the
# `:_archive` rationale below.
cc_import(
    name = "_archive_raw",
    static_library = "lib/libgooglesql.a",
)

cc_import(
    name = "_archive_protos_raw",
    static_library = "lib/libgooglesql_protos.a",
)

# `:_archive` is the public entry point for `lib/libgooglesql.a`. It
# wraps the `cc_import` and pins the link-line position of every
# third-party `cc_library` / `cc_proto_library` that the bundled
# `googlesql/...` object code references at link time. Bazel emits a
# `cc_library`'s own precompiled libraries BEFORE its `deps`, so
# attaching these here puts their `.pic.o` files AFTER `libgooglesql.a`
# in the link line — which is the only order in which
# `--start-lib`/`--end-lib`-wrapped proto objects (and any other
# lazy-archive members) can resolve the archive's unresolved externals.
#
# Source-mode hides this because the upstream
# `cc_library(:builtin_function...)` etc. transitively dep on the same
# third-party libraries, and the producer-side link order is
# dominated by topology. In prebuilt mode the combined
# `libgooglesql.a` carries the unresolved externals and we re-
# establish the dep edge here.
#
# DO NOT inline these into `:_all_hdrs` — `:_all_hdrs` is referenced
# by every wrapper BEFORE `:_archive`, which would put the deps'
# `.pic.o` blocks BEFORE the archive in the link line. The blocks
# would then be processed and skipped (no unresolved symbols yet)
# before the archive's references are seen, yielding undefined
# references.
#
# The full set:
#
#   * googleapis cc_proto_libraries
#     (`google::type::Date`, `google::type::TimeOfDay`,
#      `google::type::LatLng`, `google::rpc::Status`) — `bazel_dep`
#     `googleapis-cc`.
#
#   * `@com_google_protobuf//:timestamp_cc_proto`
#     The bundled archive references `google::protobuf::Timestamp::*`
#     and `descriptor_table_google_2fprotobuf_2ftimestamp_2eproto`
#     from `googlesql/public/value.cc` and related generated proto
#     code. Protobuf 29 ships well-known type Message subclasses in
#     separate `cc_proto_library` targets, NOT in `:protobuf`; the
#     runtime in `:protobuf` only carries the descriptor machinery.
#
#   * `@com_google_protobuf//:duration_cc_proto`
#     The bundled archive references `google::protobuf::Duration::*`
#     (default-instance + Reflection metadata) from
#     `googlesql/common/builtin_function_internal_3.cc::
#     GetProto3ConversionFunctions()`, which materialises a runtime
#     mapping from each well-known proto type to its conversion
#     callback. Same separate-cc_proto rationale as
#     `:timestamp_cc_proto`.
#
#   * `@com_google_protobuf//:wrappers_cc_proto`
#     The bundled archive references the proto3 wrapper Message
#     subclasses (`DoubleValue`, `FloatValue`, `Int64Value`,
#     `UInt64Value`, `Int32Value`, `UInt32Value`, `BoolValue`,
#     `StringValue`, `BytesValue`) and their default instances from
#     `googlesql/common/builtin_function_internal_3.cc::
#     GetProto3ConversionFunctions()`. Same conversion-mapping entry
#     as `:duration_cc_proto`; protobuf 29 keeps these in a single
#     combined `cc_proto_library` covering all nine
#     `google/protobuf/wrappers.proto` messages.
#
#   * `@com_google_protobuf//:differencer`
#     The bundled archive references
#     `google::protobuf::util::MessageDifferencer::*` and
#     `google::protobuf::util::SimpleFieldComparator::*` from
#     `googlesql/public/types/proto_type.cc` (used by
#     `ProtoType::ValueContentEquals`). Protobuf 29 ships this as a
#     separate `cc_library` outside the `:protobuf` umbrella.
#
#   * `@com_google_absl//absl/flags:flag`
#     The bundled archive references
#     `absl::flags_internal::FlagImpl::*`,
#     `absl::flags_internal::RegisterCommandLineFlag(...)`, and the
#     `FlagImpl` vtable from `googlesql/scripting/parsed_script.cc`,
#     `googlesql/public/types/type_factory.cc`,
#     `googlesql/public/functions/input_format_string_max_width.cc`
#     and others that declare `ABSL_FLAG(...)` globals. The
#     small absl subsets the per-wrapper deps lists already declare
#     (`absl/status`, `absl/strings`, `absl/time`, …) do NOT cover
#     the flag registration machinery.
#
#   * `@com_googlesource_code_re2//:re2`
#     `googlesql/public/error_helpers.cc` (in the bundled archive)
#     uses `re2::RE2` for the error-message stability regex rewriter
#     (`ApplyErrorMessageStabilityMode` -> `RE2::QuoteMeta`,
#     `RE2::FullMatchN`, ctor / dtor). Other googlesql code (e.g.
#     `public/functions/regexp.cc`) reaches RE2 via the same library;
#     all references collapse into this single dep at the prebuilt
#     boundary.
#
#   * `@boringssl//:crypto` + `@boringssl//:ssl`
#     `googlesql/base/exactfloat.cc` (in the bundled archive) uses
#     OpenSSL big-number primitives from `openssl/bn.h` (provided by
#     `@boringssl//:crypto`). `:ssl` is included for symmetry with
#     the producer-side link state (boringssl ships both as a unit
#     and the producer's `MODULE.bazel` pins both); keeping the dep
#     close immunises the wrapper against future SSL refs being
#     added upstream without paying a separate link-order fix.
cc_library(
    name = "_archive",
    deps = [
        ":_archive_raw",
        "@com_google_googleapis//google/type:date_cc_proto",
        "@com_google_googleapis//google/type:timeofday_cc_proto",
        "@com_google_googleapis//google/type:latlng_cc_proto",
        "@com_google_googleapis//google/rpc:status_cc_proto",
        "@com_google_protobuf//:timestamp_cc_proto",
        "@com_google_protobuf//:duration_cc_proto",
        "@com_google_protobuf//:wrappers_cc_proto",
        "@com_google_protobuf//:differencer",
        "@com_google_absl//absl/flags:flag",
        "@com_googlesource_code_re2//:re2",
        "@boringssl//:crypto",
        "@boringssl//:ssl",
    ],
)

cc_library(
    name = "_archive_protos",
    deps = [":_archive_protos_raw"],
)

# Convenience filegroup so the safety-gate parity check can diff the
# shipped archives byte-for-byte against a source-mode rebuild without
# having to know each `.a` path.
filegroup(
    name = "libraries",
    srcs = [
        "lib/libgooglesql.a",
        "lib/libgooglesql_protos.a",
    ],
    visibility = ["//visibility:public"],
)
