# Bazel build for the DuckDB transpiler skeleton (Phase 5.B).
#
# The transpiler walks a GoogleSQL `ResolvedAST` and lowers it to a
# DuckDB-flavored SQL string the DuckDB C++ client can execute. This
# package only ships the skeleton today: every `Emit*` returns the
# empty string and the SHAPE_TRACKER.md tracks the per-node
# disposition (`done | skiplist | not_started`). Subsequent plans
# (`transpiler-emit-scans_d5a6b7c8`, ...) fill the bodies in one
# node kind at a time.
#
# There is intentionally no CMake counterpart here -- GoogleSQL is
# Bazel-only (see ROADMAP "Build systems"), and the transpiler is
# the part of the DuckDB engine that needs GoogleSQL's resolved-AST
# headers most heavily.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "types",
    srcs = ["types.cc"],
    hdrs = ["types.h"],
    deps = [
        "@com_google_absl//absl/strings",
        # `googlesql/public:type` is the public include for the
        # `Type` / `ArrayType` / `StructType` family + the
        # `TypeKind` proto enum. The transpiler's `CAST` emit and
        # column-def emit both consult the type, so a per-kind
        # mapping lives next to the visitor it serves.
        "@googlesql//googlesql/public:type",
    ],
)

cc_library(
    name = "transpiler",
    srcs = ["transpiler.cc"],
    hdrs = ["transpiler.h"],
    deps = [
        ":types",
        "@com_google_absl//absl/strings",
        # The function-call emit consults `Function::Name()` and the
        # column-ref / table-scan emits consult `Catalog`'s `Table` +
        # `Column` interfaces, so we pull in `:catalog` and
        # `:function` alongside the resolved-AST target.
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:function",
        # ProductMode enum (`PRODUCT_EXTERNAL`) lives on the
        # options_cc_proto target; `Value::GetSQLLiteral` takes it as
        # its first argument.
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:value",
        # `:resolved_ast` is the canonical target for the generated
        # node classes (`ResolvedQueryStmt`, `ResolvedProjectScan`,
        # ...) and the `ResolvedASTVisitor` base. We pull it in via
        # the no-colon `@googlesql//googlesql/resolved_ast` form
        # for consistency with how `reference_impl_engine` depends
        # on the same library.
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "transpiler_test",
    srcs = ["transpiler_test.cc"],
    deps = [
        ":transpiler",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        # The tests drive a real `AnalyzeStatement` against a tiny
        # `SimpleCatalog` so the ResolvedAST nodes the transpiler
        # sees are exactly the ones the engine will see at runtime.
        # That keeps the assertions on the emitted SQL string honest
        # without having to hand-construct `Function` /
        # `FunctionSignature` objects for every case.
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)
