# Bazel build for the DuckDB transpiler skeleton.
#
# The transpiler walks a GoogleSQL `ResolvedAST` and lowers it to a
# DuckDB-flavored SQL string the DuckDB C++ client can execute. This
# package only ships the skeleton today: every `Emit*` returns the
# empty string and the SHAPE_TRACKER.md tracks the per-node
# disposition (`done | skiplist | not_started`). Subsequent plans
# (`transpiler-emit-scans_d5a6b7c8`, ...) fill the bodies in one
# node kind at a time.
#
# GoogleSQL provides the resolved-AST headers this visitor walks; see
# `ROADMAP.md` ("Build systems") for how `@googlesql//` is wired.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "types",
    srcs = ["types.cc"],
    hdrs = ["types.h"],
    deps = [
        "@com_google_absl//absl/strings",
        # `googlesql/public:type` is the public include for the
        # `Type` / `ArrayType` / `StructType` family + the
        # `TypeKind` proto enum. The transpiler's `CAST` emit and
        # column-def emit both consult the type, so a per-kind
        # mapping lives next to the visitor it serves.
        "@googlesql//googlesql/public:type",
    ],
)

# Convert the human-readable `functions.yaml` disposition table into
# a C++ initializer fragment (`functions_table.inc`) the `:functions`
# library `#include`s inside a `absl::flat_hash_map<std::string,
# FnEntry>`. Running the conversion at build time keeps the C++ side
# parser-free: a malformed YAML edit lands as a Bazel error (the awk
# script exits non-zero) rather than as a silent skip at run time.
#
# We use awk rather than python so the rule has no `srcs_version`
# question to answer and works identically on every developer host
# that has GoogleSQL's hermetic toolchain available (POSIX awk is
# part of the toolchain's coreutils set).
genrule(
    name = "functions_table_inc",
    srcs = [
        "functions.yaml",
        "functions_table_gen.awk",
    ],
    outs = ["functions_table.inc"],
    cmd = ("awk -f $(location functions_table_gen.awk) " +
           "$(location functions.yaml) > $@"),
)

cc_library(
    name = "functions",
    srcs = [
        "functions.cc",
        ":functions_table_inc",
    ],
    hdrs = ["functions.h"],
    deps = [
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "transpiler",
    srcs = ["transpiler.cc"],
    hdrs = ["transpiler.h"],
    deps = [
        ":functions",
        ":types",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/strings",
        # The function-call emit consults `Function::Name()` and the
        # column-ref / table-scan emits consult `Catalog`'s `Table` +
        # `Column` interfaces, so we pull in `:catalog` and
        # `:function` alongside the resolved-AST target.
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:function",
        # ProductMode enum (`PRODUCT_EXTERNAL`) lives on the
        # options_cc_proto target; `Value::GetSQLLiteral` takes it as
        # its first argument.
        "@googlesql//googlesql/public:options_cc_proto",
        # `:type` provides `type.h` plus the per-kind header bundle
        # (`struct_type.h`, `array_type.h`, ...) the STRUCT / UNNEST
        # emits walk for field names / element types. `:value`
        # transitively re-exports the same header set, but pinning
        # `:type` directly keeps Bazel's strict-deps check honest
        # when a future emit drops the `Value` dependency.
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        # `:resolved_ast` is the canonical target for the generated
        # node classes (`ResolvedQueryStmt`, `ResolvedProjectScan`,
        # ...) and the `ResolvedASTVisitor` base. We pull it in via
        # the no-colon `@googlesql//googlesql/resolved_ast` form so
        # the link line picks up the bundled visitor base.
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "transpiler_test",
    srcs = ["transpiler_test.cc"],
    deps = [
        ":functions",
        ":transpiler",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        # The tests drive a real `AnalyzeStatement` against a tiny
        # `SimpleCatalog` so the ResolvedAST nodes the transpiler
        # sees are exactly the ones the engine will see at runtime.
        # That keeps the assertions on the emitted SQL string honest
        # without having to hand-construct `Function` /
        # `FunctionSignature` objects for every case.
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)
